force-app/main/default/objects/IF_MeetingLog__c/IF_MeetingLog__c.object-meta.xml
<CustomObject>
    <label>IF_MeetingLog</label>
    <nameField>
        <label>IF_MeetingLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IF_MeetingLog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>