force-app/main/default/objects/IF_MeetingLog__c/fields/AccountIFExternalKey__c.field-meta.xml
<CustomField>
    <fullName>AccountIFExternalKey__c</fullName>
    <label>AccountIFExternalKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>