force-app/main/default/objects/IF_MeetingLog__c/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <label>Contents</label>
    <type>TextArea</type>
</CustomField>