force-app/main/default/objects/IF_MeetingLog__c/fields/IFExternalKey__c.field-meta.xml
<CustomField>
    <fullName>IFExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>IFExternalKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>